Fix filter/tracked table layout on mobile

--- a/Style/style.scss
+++ b/Style/style.scss
@@ -222,12 +222,23 @@ label:hover {
         box-sizing: border-box;
         width: 100%;
     }
+
+    .row-sep {
+        //Only shown in narrow screen mode
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 650px) {
     .filter-table {
         grid-template-columns: auto 1fr auto;
         grid-auto-flow: dense;
+
+        .row-sep {
+            display: block;
+            height: 1em;
+            grid-column: 1 / -1;
+        }
 
         .header {
             display: none;
@@ -236,26 +247,21 @@ label:hover {
         form {
             & > *:nth-child(1),
             & > *:nth-child(3),
-            input[type=checkbox] {
+            & > *:nth-child(5) {
                 grid-column: 1 / 2;
             }
 
-            input[type=text],
-            select {
+            & > *:nth-child(2),
+            & > *:nth-child(4),
+            & > *:nth-child(6) {
                 grid-column: 2 / 3;
             }
 
-
-            input[type=submit],
-            .dangerButton {
+            & > *:nth-child(7) {
+                grid-column: 3;
                 grid-row: span 3;
                 align-self: stretch;
             }
-        }
-
-        div {
-            grid-column: 1 / -1;
-            height: 1em;
         }
     }
 }
